unpackaged/main/default/objects/Store__c/fields/AppointmentBookingInterval__c.field-meta.xml
<CustomField>
    <fullName>AppointmentBookingInterval__c</fullName>
    <description>Appointment booking interval in minute</description>
    <inlineHelpText>Appointment booking interval in minute</inlineHelpText>
    <label>Appointment booking interval</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>