unpackaged/main/default/objects/Store__c/fields/AppointmentDuration__c.field-meta.xml
<CustomField>
    <fullName>AppointmentDuration__c</fullName>
    <description>Appointment duration in minute</description>
    <inlineHelpText>Appointment duration in minute</inlineHelpText>
    <label>Appointment duration</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>