unpackaged/main/default/objects/Store__c/fields/AppointmentEnable__c.field-meta.xml
<CustomField>
    <fullName>AppointmentEnable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment enable</label>
    <type>Checkbox</type>
</CustomField>