unpackaged/main/default/objects/Store__c/fields/AppointmentHours__c.field-meta.xml
<CustomField>
    <fullName>AppointmentHours__c</fullName>
    <description>Boutique appointment hours
Days are identify with the field DOW (days of the week) as 
Sunday : 0
Monday : 1
etc.
Hours are 0-24 format</description>
    <inlineHelpText>Boutique appointment hours
Days are identify with the field DOW (days of the week) as 
Sunday : 0
Monday : 1
etc.
Hours are 0-24 format</inlineHelpText>
    <label>Appointment hours</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>