unpackaged/main/default/objects/Store__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email of the store</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>