unpackaged/main/default/objects/Store__c/fields/Ferme__c.field-meta.xml
<CustomField>
    <fullName>Ferme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ferme</label>
    <type>Checkbox</type>
</CustomField>