unpackaged/main/default/objects/Store__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>TE_Created_Date__c</fullName>
    <label>TE Created Date</label>
    <type>DateTime</type>
    
</CustomField>