unpackaged/main/default/objects/Store__c/fields/Retail_Excluded_Tax__c.field-meta.xml
<CustomField>
    <fullName>Retail_Excluded_Tax__c</fullName>
    <label>Retail Excluded Tax</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>