unpackaged/main/default/objects/Store__c/fields/SourceStoreId__c.field-meta.xml
<CustomField>
    <fullName>SourceStoreId__c</fullName>
    <externalId>true</externalId>
    <label>Source Store Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>