unpackaged/main/default/objects/Store__c/fields/StoreLabel__c.field-meta.xml
<CustomField>
    <fullName>StoreLabel__c</fullName>
    <label>Store Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>