unpackaged/main/default/objects/Store__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUT</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>FSS</fullName>
                <label>Free Standing Store</label>
            </value>
            <value>
                <fullName>CCC</fullName>
                <label>Customer Care Center</label>
            </value>
            <value>
                <fullName>SIS</fullName>
                <label>Shop-in-shop</label>
            </value>
            <value>
                <fullName>SUB</fullName>
                <label>Subsidiary Head Quarter</label>
            </value>
            <value>
                <fullName>WHS</fullName>
                <label>Wharehouse</label>
            </value>
            <value>
                <fullName>HDQ</fullName>
                <label>Heardquarter</label>
            </value>
            <value>
                <fullName>POP</fullName>
                <label>Pop Up Store</label>
            </value>
            <value>
                <fullName>ECO</fullName>
                <label>eCommerce store</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>