unpackaged/main/default/objects/Store__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StoreLabel__c</columns>
    <columns>Address1__c</columns>
    <columns>City__c</columns>
    <columns>Region__c</columns>
    <columns>Country__c</columns>
    <columns>SourceStoreId__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>