unpackaged/main/default/objects/Store__c/listViews/booxiStores.listView-meta.xml
<ListView>
    <fullName>booxiStores</fullName>
    <columns>NAME</columns>
    <columns>AppointmentEnable__c</columns>
    <columns>BooxiId__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BooxiId__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>booxi Stores</label>
</ListView>