unpackaged/main/default/objects/Store__c/listViews/Paris.listView-meta.xml
<ListView>
    <fullName>Paris</fullName>
    <columns>NAME</columns>
    <columns>StoreLabel__c</columns>
    <columns>Address1__c</columns>
    <columns>City__c</columns>
    <columns>Region__c</columns>
    <columns>Country__c</columns>
    <columns>SourceStoreId__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>001</value>
    </filters>
    <filters>
        <field>SourceStoreId__c</field>
        <operation>contains</operation>
        <value>FR</value>
    </filters>
    <label>Paris</label>
</ListView>